--- a/src/html/index.html
+++ b/src/html/index.html
@@ -27,7 +27,7 @@
     <div class="container">
       <div class="services-tabs tab-content" id="nav-tabContent">
 
-        <div class="row services-tabs-item tab-pane fade show active" id="list-shouse" role="tabpanel" aria-labelledby="list-shouse">
+        <div class="row services-tabs-item tab-pane fade" id="list-shouse" role="tabpanel" aria-labelledby="list-shouse">
           <div class="col-12 col-md-6">
             <div class="services-tabs-item--img img-full-cont">
               <img src="img/tabs/tab1.png" alt="uss">
@@ -151,7 +151,7 @@
     <div class="container-fluid">
       <div class="services-links">
         <div class="services-links__list list-group" id="list-tab">
-          <a class="services-links__list-item active" id="list-shouse" data-toggle="list" href="#list-shouse" role="tab" aria-controls="shouse">Умный дом</a>
+          <a class="services-links__list-item" id="list-shouse" data-toggle="list" href="#list-shouse" role="tab" aria-controls="shouse">Умный дом</a>
           <a class="services-links__list-item" id="list-csecurity" data-toggle="list" href="#list-csecurity" role="tab" aria-controls="csecurity">Пультовая охрана</a>
           <a class="services-links__list-item" id="list-psecurity" data-toggle="list" href="#list-psecurity" role="tab" aria-controls="psecurity">Личная охрана</a>
           <a class="services-links__list-item" id="list-sconcept" data-toggle="list" href="#list-sconcept" role="tab" aria-controls="sconcept">Концепция безопасности</a>
