--- a/src/html/page-services.html
+++ b/src/html/page-services.html
@@ -8,44 +8,44 @@
       <div class="col-12 col-md-9">
         <div class="main-content">
           <div class="services-list row">
-            <div class="services-list-item col-md-6">
-              <a href="page-single.html" class="services-list-item__cont" style="background: linear-gradient(0deg, rgba(43, 42, 42, 0.6), rgba(43, 42, 42, 0.6)), url('img/services/1.png');">
+            <div class="services-list-item col-12 col-md-6">
+              <a href="single-services.html" class="services-list-item__cont" style="background: linear-gradient(0deg, rgba(43, 42, 42, 0.6), rgba(43, 42, 42, 0.6)), url('img/services/1.png');">
                 <h2 class="services-list-item__cont--title">Пультовая охрана</h2>
                 <span class="services-list-item__cont--desc">Мониторинг, реарирование, обслуживание</span>
               </a>
             </div>
-            <div class="services-list-item col-md-6">
-              <a href="page-single.html" class="services-list-item__cont" style="background: linear-gradient(0deg, rgba(43, 42, 42, 0.6), rgba(43, 42, 42, 0.6)), url('img/services/2.png');">
+            <div class="services-list-item col-12 col-md-6">
+              <a href="single-services.html" class="services-list-item__cont" style="background: linear-gradient(0deg, rgba(43, 42, 42, 0.6), rgba(43, 42, 42, 0.6)), url('img/services/2.png');">
                 <h2 class="services-list-item__cont--title">Личная безопасность</h2>
                 <span class="services-list-item__cont--desc">Физическая охрана</span>
               </a>
             </div>
-            <div class="services-list-item col-md-6">
-              <a href="page-single.html" class="services-list-item__cont" style="background: linear-gradient(0deg, rgba(43, 42, 42, 0.6), rgba(43, 42, 42, 0.6)), url('img/services/3.png');">
+            <div class="services-list-item col-12 col-md-6">
+              <a href="single-services.html" class="services-list-item__cont" style="background: linear-gradient(0deg, rgba(43, 42, 42, 0.6), rgba(43, 42, 42, 0.6)), url('img/services/3.png');">
                 <h2 class="services-list-item__cont--title">Концепция безопасности</h2>
                 <span class="services-list-item__cont--desc">Индивидуальная разработка</span>
               </a>
             </div>
-            <div class="services-list-item col-md-6">
-              <a href="page-single.html" class="services-list-item__cont" style="background: linear-gradient(0deg, rgba(43, 42, 42, 0.6), rgba(43, 42, 42, 0.6)), url('img/services/4.png');">
+            <div class="services-list-item col-12 col-md-6">
+              <a href="single-services.html" class="services-list-item__cont" style="background: linear-gradient(0deg, rgba(43, 42, 42, 0.6), rgba(43, 42, 42, 0.6)), url('img/services/4.png');">
                 <h2 class="services-list-item__cont--title">Контроль доступа</h2>
                 <span class="services-list-item__cont--desc">Установка, сопровождение</span>
               </a>
             </div>
-            <div class="services-list-item col-md-6">
-              <a href="page-single.html" class="services-list-item__cont" style="background: linear-gradient(0deg, rgba(43, 42, 42, 0.6), rgba(43, 42, 42, 0.6)), url('img/services/5.png');">
+            <div class="services-list-item col-12 col-md-6">
+              <a href="single-services.html" class="services-list-item__cont" style="background: linear-gradient(0deg, rgba(43, 42, 42, 0.6), rgba(43, 42, 42, 0.6)), url('img/services/5.png');">
                 <h2 class="services-list-item__cont--title">Видеонаблюдение</h2>
                 <span class="services-list-item__cont--desc">Проектирование, монтаж, обслуживание</span>
               </a>
             </div>
-            <div class="services-list-item col-md-6">
-              <a href="page-single.html" class="services-list-item__cont" style="background: linear-gradient(0deg, rgba(43, 42, 42, 0.6), rgba(43, 42, 42, 0.6)), url('img/services/6.png');">
+            <div class="services-list-item col-12 col-md-6">
+              <a href="single-services.html" class="services-list-item__cont" style="background: linear-gradient(0deg, rgba(43, 42, 42, 0.6), rgba(43, 42, 42, 0.6)), url('img/services/6.png');">
                 <h2 class="services-list-item__cont--title">Пожарная сигнализация</h2>
                 <span class="services-list-item__cont--desc">Проектирование, монтаж, обслуживание</span>
               </a>
             </div>
-            <div class="services-list-item col-md-6">
-              <a href="page-single.html" class="services-list-item__cont" style="background: linear-gradient(0deg, rgba(43, 42, 42, 0.6), rgba(43, 42, 42, 0.6)), url('img/services/7.png');">
+            <div class="services-list-item col-12 col-md-6">
+              <a href="single-services.html" class="services-list-item__cont" style="background: linear-gradient(0deg, rgba(43, 42, 42, 0.6), rgba(43, 42, 42, 0.6)), url('img/services/7.png');">
                 <h2 class="services-list-item__cont--title">Личная охрана</h2>
                 <span class="services-list-item__cont--desc">Телохранители</span>
               </a>
