--- a/src/html/inc/sidebar.html
+++ b/src/html/inc/sidebar.html
@@ -1,12 +1,17 @@
 <div class="sidebar our-services">
-  <span class="our-services--title">Наши услуги</span>
-  <ul class="our-services--list">
-    <li><a href="#">Умный дом</a></li>
-    <li><a href="#">Пультовая охрана</a></li>
-    <li><a href="#">Личная охрана</a></li>
-    <li><a href="#">Концепция безопасности</a></li>
-    <li><a href="#">Вилеонаблюдение</a></li>
-    <li><a href="#">Контроль доступа</a></li>
-    <li><a href="#">Пожарная сигнализация</a></li>
-  </ul>
+  <aside id="secondary" class="widget-area">
+    <section id="nav_menu-5" class="widget widget_nav_menu">
+      <div class="menu-main-container">
+        <h2 class="widget-title">Услуги</h2>
+        <ul id="menu-sidebar-menu" class="menu"><li id="menu-item-185" class="menu-item menu-item-type-post_type menu-item-object-post menu-item-185"><a href="http://test5.loc/service/ohrannoe-oborudovanie/">Охранное оборудование</a></li>
+          <li id="menu-item-186" class="menu-item menu-item-type-post_type menu-item-object-post menu-item-186"><a href="http://test5.loc/service/umnyj-dom/">Умный дом</a></li>
+          <li id="menu-item-187" class="menu-item menu-item-type-post_type menu-item-object-post menu-item-187"><a href="http://test5.loc/service/fizicheskaja-ohrana/">Физическая охрана</a></li>
+          <li id="menu-item-188" class="menu-item menu-item-type-post_type menu-item-object-post menu-item-188"><a href="http://test5.loc/service/lichnaja-ohrana/">Личная охрана</a></li>
+          <li id="menu-item-189" class="menu-item menu-item-type-post_type menu-item-object-post menu-item-189"><a href="http://test5.loc/service/videonabljudenie/">Видеонаблюдение</a></li>
+          <li id="menu-item-190" class="menu-item menu-item-type-post_type menu-item-object-post menu-item-190"><a href="http://test5.loc/service/kontrol-dostupa/">Контроль доступа</a></li>
+          <li id="menu-item-191" class="menu-item menu-item-type-post_type menu-item-object-post menu-item-191"><a href="http://test5.loc/service/pultovaja-ohrana/">Пультовая охрана</a></li>
+        </ul>
+      </div>
+    </section>
+  </aside>
 </div>
